:train: Setup development environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
 
     services:
       mysql:
-        image: mysql
+        image: mysql:8.4
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: true
         ports:
