--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,9 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
-  host: <%= ENV.fetch("DB_HOST") { "127.0.0.1" } %>
+  password: password
+  host: db
+  ssl_mode: :required
 
 development:
   <<: *default
