--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.11",
     "@types/tailwindcss": "^3.1.0",
     "esbuild": "^0.25.1",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.5.3",
+    "ts-jest": "^29.2.6",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
