--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@google/gemini-cli": "^0.1.7",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.11",
     "@types/tailwindcss": "^3.1.0",
